--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <style type="text/css">
         #title {
             padding: 0;
-            /*text-shadow: 2px 2px 4px rgba(50, 50, 50, 1)*/
+            color: #9e9e9e;
+            text-shadow: 1px 1px 5px rgba(150, 150, 150, 1)
         }
 
         html {
@@ -27,19 +28,19 @@
         div#parent {
             text-align: center;
             position: absolute;
-            top: 0;
+            top: 65%;
             bottom: 0;
             left: 0;
             right: 0;
             /*border: 1px solid #F00;*/
         }
 
-        div#children {
-            /*border: 1px solid #ffdb4c;*/
-            position: relative;
-            top: 70%;
-            transform: translateY(-50%);
-        }
+        /*div#children {*/
+        /*border: 1px solid #ffdb4c;*/
+        /*position: relative;*/
+        /*top: 70%;*/
+        /*transform: translateY(-50%);*/
+        /*}*/
 
         a#start-button {
             width: 200px;
@@ -49,13 +50,13 @@
 </head>
 <body>
 <div id="parent">
-    <div id="children">
-        <h4 id="title" class="grey-text">戴上耳机后，点击开始键</h4>
-        <br>
-        <br>
-        <a href="http://materializecss.com/getting-started.html" id="start-button"
-           class="btn-large waves-effect waves-light grey">START</a>
-    </div>
+    <!--<div id="children">-->
+    <h4 id="title">戴上耳机后，点击开始键</h4>
+    <br>
+    <br>
+    <a href="game-idx.html" id="start-button"
+       class="btn-large waves-effect waves-light grey">START</a>
+    <!--</div>-->
 </div>
 <!--  Scripts-->
 <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
