--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         #title {
             padding: 0;
             color: #9e9e9e;
-            text-shadow: 1px 1px 5px rgba(150, 150, 150, 1)
+            text-shadow: 1px 1px 5px rgba(150, 150, 150, 1);
+            /*font-weight: 500;*/
         }
 
         html {
